--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
 - script: |
     cd example-py-pytest
     pip install pytest pytest-azurepipelines pytest-cov
-    python -m pytest tests --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+    python -m pytest tests --doctest-modules --junitxml=junit/test-results-$(python.version).xml --cov=. --cov-report=xml --cov-report=html
   displayName: 'Test with pytest'
 
 - task: PublishTestResults@2
